# cookiecutter-python_project

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
{{cookiecutter.project_slug}}/.github/: python-publish.yml
{{cookiecutter.project_slug}}/.github/workflows/: python-publish.yml
{{cookiecutter.project_slug}}/docs/: index.rst  install.rst
{{cookiecutter.project_slug}}/tests/: {{cookiecutter.project_slug}}_test.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
