[metadata]
name = {{cookiecutter.project_slug}}
description = {{cookiecutter.project_short_description}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
maintainer = {{cookiecutter.full_name}}
maintainer_email = {{cookiecutter.email}}
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = >= 3.4
setup_requires =
    setuptools >= 38.3.0
install_requires = 
    numpy
    matplotlib
    scipy
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = {{cookiecutter.project_slug}}/_version.py
versionfile_build = {{cookiecutter.project_slug}}/_version.py
tag_prefix =
parentdir_prefix = {{cookiecutter.project_slug}}-

[flake8]
docstring-convention = numpy
per-file-ignores =
    tests/*: D103, D100
exclude = {{cookiecutter.project_slug}}/_version.py
max-line-length = 88
extend-ignore = E203
